Rewrite SBT support
- ditch bash script in favour of platform agnostic solution
- use proper dependencies between tasks to avoid dummy function calls